--- a/styles.css
+++ b/styles.css
@@ -2965,8 +2965,8 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #000;
-  background-color: #bd5d38;
-  border-color: #bd5d38;
+  background-color: #FB9EAC;
+  border-color: #FB9EAC;
 }
 .btn-primary:hover {
   color: #000;
