--- a/styles.css
+++ b/styles.css
@@ -2970,8 +2970,8 @@ textarea.form-control-lg {
 }
 .btn-primary:hover {
   color: #000;
-  background-color: #c77556;
-  border-color: #c46d4c;
+  background-color: #f5bac3;
+  border-color: #f5bac3;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #000;
