--- a/styles.css
+++ b/styles.css
@@ -11171,6 +11171,9 @@ audio::-webkit-media-controls-volume-slider {
 
 
 /*quiz*/
+  .mobile-only {
+    display: none;
+  }
   @media (max-width: 37.5em) {
     .grid h1 {
       font-size: 25px !important;
